--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Desaparecidos.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Desaparecidos.cshtml
@@ -11,6 +11,16 @@
     <link href="~/Content/site.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <h2>Pessoas Desaparecidas</h2>
+    <p>Estima-se que cerca de 200 mil pessoas desaparecem todos os anos no Brasil, sendo 40 mil crianças e adolescentes, porém os dados não são precisos, pois não há um cadastro único de pessoas desaparecidas no país, o que acaba dificultando tanto estatísticas quanto a localização das mesmas.</p>
+    <p>Como o desaparecimento não é considerado crime, é feito apenas o boletim de ocorrência e não há investigação até haver a suspeita de um crime --um homicídio ou um sequestro, por exemplo. A lei também obriga que o desaparecimento de crianças e adolescentes até 18 anos seja investigado, bem como o de pessoas com transtorno mental, mas, segundo a promotora Eliana, apenas o desaparecimento de crianças até 12 anos é investigado no país.</p>
+    <p>Os desaparecimentos são classificados das seguintes formas:</p>
+    <p>•	Voluntário – quando a pessoa se afasta por vontade própria e sem aviso prévio, o que pode ser motivado por: desentendimento, medo, aflição, choque de visões, planos de vida diferentes.</p>
+    <p>•	Involuntário – quando a pessoa é afastada do cotidiano por um evento sobre o qual não tem controle, como um acidente, um problema de saúde ou um desastre natural.</p>
+    <p>•	Forçado – quando outras pessoas provocam o afastamento, sem a concordância da pessoa, como sequestro ou a ação do estado.</p>
+    <p>O senado detém uma proposta em votação que visa unificar o cadastro de pessoas desaparecidas. Caso seja aprovada, as informações do banco de dados passarão a ser compartilhadas entre todos estados. Terá descrição física e fotos. E também um espaço sigiloso, para os investigadores, com informações genéticas. A relatora do projeto, deputada Eliziane Gamma (PPS-MA) diz que os estados que não atualizarem os dados serão punidos.</p>
+
+
     <div class="form-group">
         <div class="row">
             <div class="col-sm-4">
