--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Usuarios.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Usuarios.cshtml
@@ -11,6 +11,8 @@
     <link href="~/Content/site.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+@if (Session["usuarioLogado"] != null)
+{
     <div class="form-group">
         <div class="row">
             <div class="col-sm-4">
@@ -45,6 +47,7 @@
         }
     </div>
     <script src="~/Scripts/Busca.js"></script>
+}
 </body>
 
 
