--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/CriarMorador.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/CriarMorador.cshtml
@@ -76,8 +76,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="file">Upload Image:</label>
-                                <input type="file" name="file" id="file" style="width: 100%;" class="submit btn btn-sm" />
-                                <input type="submit" value="Upload" class="submit btn btn-sm" />
+                                <input type="file" name="file" id=".+-" style="width: 100%;" class="submit btn btn-sm" />
                             </div>
                             <button type="submit" class="login-button">Registrar</button>
                         </div>
