--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Denuncias.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Denuncias.cshtml
@@ -14,10 +14,12 @@
 <body>
     <div>
         @{
-            if (Session["usuarioLogado"] == null) {
+            if (Session["usuarioLogado"] == null)
+            {
                 throw new Exception("Acesso negado");
             }
-            if (new SOS_MoradoresDeRua.DAO.UsuarioDAO().BuscaId((int)Session["usuarioLogado"]).TipoUsuarioId != 1) {
+            if (new SOS_MoradoresDeRua.DAO.UsuarioDAO().BuscaId((int)Session["usuarioLogado"]).TipoUsuarioId != 1)
+            {
                 throw new Exception("Acesso negado");
             }
             SOS_MoradoresDeRua.DAO.DenunciaDAO denuncia = new SOS_MoradoresDeRua.DAO.DenunciaDAO();
@@ -30,64 +32,27 @@
                     var texto = item.Descricao;
                     var delator = item.Usuario;
                 }
-                <span> @texto </span>
-                <span> @delator.Id </span>
-
-                @if (item.Comentario != null)
-                {
-                    var comentario = item.Comentario;
-                    <div> @comentario.Id </div>
-                    var pessoa = new SOS_MoradoresDeRua.DAO.PessoaDAO().BuscaPorId(comentario.PessoaId);
-
-                    var morador = new SOS_MoradoresDeRua.DAO.MoradorDeRuaDAO().BuscaPorPessoaId(pessoa.Id);
-                    if (morador != null)
+                <div class="row">
+                                        @if (item.Pessoa != null)
+                                        {
+                                            var pessoa = new SOS_MoradoresDeRua.DAO.PessoaDAO().BuscaPorId(item.PessoaId.Value);
+                                            var morador = new SOS_MoradoresDeRua.DAO.MoradorDeRuaDAO().BuscaPorPessoaId(pessoa.Id);
+                                            if (morador != null)
+                                            {
+                                                <a href="/Master/Morador?id=@pessoa.Id"><div class="col-sm-3">Delator: @delator.Nome</div><div class="col-sm-6">Denúncia: @texto</div><div class="col-sm-3">Morador de rua: @pessoa.Nome</div></a>
+                                            }
+                                            var desaparecido = new SOS_MoradoresDeRua.DAO.PessoaDesaparecidaDAO().BuscaPorPessoaId(pessoa.Id);
+                                            if (desaparecido != null)
+                                            {
+                                                <a href="/Master/Desaparecido?id=@pessoa.Id"><div class="col-sm-3">Delator: @delator.Nome</div><div class="col-sm-6">Denúncia: @texto</div><div class="col-sm-3">Pessoa desaparecida: @pessoa.Nome</div></a>
+                                            }
+                                        }
+                    @if (item.UsuarioDenunciado != null)
                     {
-                        <a href="/Master/Morador?id=@pessoa.Id">Ir</a>
+                        <a href="/Master/Usuario?id=@item.UsuarioDenunciadoId"><div class="col-sm-3">Delator: @delator.Nome</div><div class="col-sm-6">Denúncia: @texto</div><div class="col-sm-3">Usuário: @item.Usuario.Nome</div></a>
                     }
-
-                    var desaparecido = new SOS_MoradoresDeRua.DAO.PessoaDesaparecidaDAO().BuscaPorPessoaId(pessoa.Id);
-                    if (desaparecido != null)
-                    {
-                        <a href="/Master/Desaparecido?id=@pessoa.Id">Ir</a>
-                    }
-                }
-                @if (item.Pessoa != null)
-                {
-                    var pessoa = new SOS_MoradoresDeRua.DAO.PessoaDAO().BuscaPorId(item.PessoaId.Value);
-                    <div> @pessoa.Id </div>
-                    var morador = new SOS_MoradoresDeRua.DAO.MoradorDeRuaDAO().BuscaPorPessoaId(pessoa.Id);
-                    if (morador != null)
-                    {
-                        <a href="/Master/Morador?id=@pessoa.Id">Ir</a>
-                    }
-
-                    var desaparecido = new SOS_MoradoresDeRua.DAO.PessoaDesaparecidaDAO().BuscaPorPessoaId(pessoa.Id);
-                    if (desaparecido != null)
-                    {
-                        <a href="/Master/Desaparecido?id=@pessoa.Id">Ir</a>
-                    }
-                }
-                @if (item.Foto != null)
-                {
-                    var foto = item.Foto;
-                    <div> @foto.Id </div>
-                    var fotos = new SOS_MoradoresDeRua.DAO.FotoDAO().BuscaPorId(item.PessoaId.Value);
-
-                    var morador = new SOS_MoradoresDeRua.DAO.MoradorDeRuaDAO().BuscaPorPessoaId(fotos.Id);
-                    if (morador != null)
-                    {
-                        <a href="/Master/Morador?id=@fotos.Id">Ir</a>
-                    }
-
-                    var desaparecido = new SOS_MoradoresDeRua.DAO.PessoaDesaparecidaDAO().BuscaPorPessoaId(fotos.Id);
-                    if (desaparecido != null)
-                    {
-                        <a href="/Master/Desaparecido?id=@fotos.Id">Ir</a>
-                    }
-                }
-                
+                </div>
             </div>
         }
     </div>
 </body>
-
