--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/MoradoresDeRua.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/MoradoresDeRua.cshtml
@@ -26,7 +26,7 @@
         <a href="/Master/CriarMorador" class="btn btn-primary">Adicionar Novo</a>
     }
     <div id="NomeMorador">
-        <h2>Moradores De Rua</h2>
+        <h2>Pessoas em Situação De Rua</h2>
         <p>Conforme definição da Secretaria Nacional de Assistência Social, a população em situação de rua se caracteriza por ser um grupo populacional heterogêneo, composto por pessoas com diferentes realidades, mas que têm em comum a condição de pobreza absoluta, vínculos interrompidos ou fragilizados e falta de habitação convencional regular, sendo compelidas a utilizar a rua como espaço de moradia e sustento, por caráter temporário ou de forma permanente.</p>
         <p>Entre os principais fatores que podem levar as pessoas a irem morar nas ruas estão: ausência de vínculos familiares, perda de algum ente querido, desemprego, violência, perda da autoestima, alcoolismo, uso de drogas e doença mental.</p>
         <p>Uma pesquisa publicada pelo Ipea com base em dados de 2015 projetou que o Brasil tem pouco mais de 100 mil pessoas vivendo nas ruas. Segundo a mesma, das 101.854 pessoas em situação de rua, 40,1% estão em municípios com mais de 900 mil habitantes.</p>
