--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Usuario.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Usuario.cshtml
@@ -12,36 +12,49 @@
     <link href="~/Content/site.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    @{
+    @if (Session["usuarioLogado"] != null)
+    {
         var id = int.Parse(Request.Params["id"]);
-        var usuario = new SOS_MoradoresDeRua.DAO.UsuarioDAO().BuscaId(id);        
-    }
+        var usuario = new SOS_MoradoresDeRua.DAO.UsuarioDAO().BuscaId(id);
 
-    <div class="row">  
-        <div class="col-md-10 nome">
-            <h3><Strong>@usuario.Nome</Strong></h3>
-        </div>
-        <div class="col-md-1">
+        <div class="row">
+            <div class="col-md-10 nome">
+                <h3><Strong>@usuario.Nome</Strong></h3>
+            </div>
+            <div class="col-md-1">
             @if (Session["usuarioLogado"] != null)
             {
-                @Html.ActionLink(" ", "Reportar", "Usuario", new { id = usuario.Id }, new { @class = "btn btn-primary btn-warning glyphicon glyphicon-warning-sign" })
+                <p>
+                    <a class="btn btn-primary btn-warning glyphicon glyphicon-warning-sign" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"></a>
+                </p>
+                <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                        @using (Html.BeginForm("Reportar", "Usuario", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                        {
+                            <input type="hidden" value="@usuario.Id" name="idUsuario" id="idUsuario" />
+                            <input type="text" class="form-control" placeholder="Motivo" name="texto" id="texto" style="width: 200px" />
+                            <button type="submit" class="btn btn-warning">Reportar</button>
+                        }
+                    </div>
+                </div>
             }
-        </div>
-        <div class="col-md-1">
-            @if(Session["usuarioLogado"] != null)
-            {
-                if(new SOS_MoradoresDeRua.DAO.UsuarioDAO().BuscaId((int)Session["usuarioLogado"]).TipoUsuarioId == 1)
-                { 
-                    @Html.ActionLink(" ", "Remover", "Usuario", new { id = usuario.Id }, new { @class = "btn btn-primary btn-danger glyphicon glyphicon-trash" })
+            </div>
+            <div class="col-md-1">
+                @if (Session["usuarioLogado"] != null)
+                {
+                    if (new SOS_MoradoresDeRua.DAO.UsuarioDAO().BuscaId((int)Session["usuarioLogado"]).TipoUsuarioId == 1)
+                    {
+                        @Html.ActionLink(" ", "Remover", "Usuario", new { id = usuario.Id }, new { @class = "btn btn-primary btn-danger glyphicon glyphicon-trash" })
+                    }
                 }
-            }            
+            </div>
         </div>
-    </div>
-    
-    <div class="row container">
-        <h4><Strong>E-Mail:</Strong>  @usuario.EMail</h4> <br />
-        <h4><Strong>Telefone:</Strong> @usuario.Telefone </h4> <br />
-        <h4><Strong>Redes Sociais:</Strong>  @usuario.LinkRedesSociais</h4> <br />
-        <h4><Strong>Sobre:</Strong> @usuario.Sobre </h4> <br />
-    </div>
+
+        <div class="row container">
+            <h4><Strong>E-Mail:</Strong>  @usuario.EMail</h4> <br />
+            <h4><Strong>Telefone:</Strong> @usuario.Telefone </h4> <br />
+            <h4><Strong>Redes Sociais:</Strong>  @usuario.LinkRedesSociais</h4> <br />
+            <h4><Strong>Sobre:</Strong> @usuario.Sobre </h4> <br />
+        </div>
+    }
 </body>
