--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Shared/_Layout.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Shared/_Layout.cshtml
@@ -11,45 +11,48 @@
 <body>
     <link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css">
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="http://localhost:50274/Master/Index">SOS </a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="http://localhost:50274/Master/Index">Inicio</a></li>
-            <li><a href="http://localhost:50274/Master/MoradoresDeRua">Situação de Rua</a></li>
-            <li><a href="http://localhost:50274/Master/Desaparecidos">Desaparecidos</a></li>
-            <li><a href="http://localhost:50274/Master/Usuarios">Usuários</a></li>
-              @if (Session["usuarioLogado"] != null)
-              {
-            <li><a href="http://localhost:50274/Master/Login">Sair</a></li>
-              }
-              else if (Session["usuarioLogado"] == null)
-              {
-                <li><a href="http://localhost:50274/Master/Login">Login</a></li>
-              }
-            @if (Session["usuarioLogado"] != null)
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="http://localhost:50274/Master/Sobre">SOS </a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="http://localhost:50274/Master/Index">Inicio</a></li>
+                    <li><a href="http://localhost:50274/Master/MoradoresDeRua">Situação de Rua</a></li>
+                    <li><a href="http://localhost:50274/Master/Desaparecidos">Desaparecidos</a></li>
+                    @if (Session["usuarioLogado"] != null)
+            {
+                        <li><a href="http://localhost:50274/Master/Usuarios">Usuários</a></li>
+                    }
+                    @if (Session["usuarioLogado"] != null)
+                    {
+                        <li><a href="http://localhost:50274/Master/Login">Sair</a></li>
+                    }
+                    else if (Session["usuarioLogado"] == null)
+                    {
+                        <li><a href="http://localhost:50274/Master/Login">Login</a></li>
+                    }
+                    @if (Session["usuarioLogado"] != null)
             {
                 if (new SOS_MoradoresDeRua.DAO.UsuarioDAO().BuscaId((int)Session["usuarioLogado"]).TipoUsuarioId == 1)
                 {
-                <li><a href="http://localhost:50274/Master/Denuncias">Denúncias</a></li>
-                }
-            }
-          </ul>         
+                            <li><a href="http://localhost:50274/Master/Denuncias">Denúncias</a></li>
+                        }
+                    }
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
     <div class="container body-content">
         @RenderBody()
-        
+
         <footer class="rodape">
             <br /><br />
             <p>&copy; @DateTime.Now.Year - S.O.S. Moradores de Rua</p>
