--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/CriarDesaparecido.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/CriarDesaparecido.cshtml
@@ -3,6 +3,7 @@
 @model PessoaDesaparecida
 @{
     ViewBag.Title = "Criar nova pessoa desaparecida";
+    Menus.SetActiveMenu(Menus.MenuEnum.Desaparecidos);
 }
 
 <head>
