--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/CriarMorador.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/CriarMorador.cshtml
@@ -3,6 +3,7 @@
 @model MoradorDeRua
 @{
     ViewBag.Title = "Criar novo morador de rua";
+    Menus.SetActiveMenu(Menus.MenuEnum.SituacaoRua);
 }
 
 <head>
