--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Denuncias.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Denuncias.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Denúncias";
+    Menus.SetActiveMenu(Menus.MenuEnum.Denuncias);
 }
 <head>
     <meta charset="utf-8" />
