--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Desaparecido.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Desaparecido.cshtml
@@ -1,6 +1,7 @@
 ﻿*
 @{
     ViewBag.Title = "Desaparecido";
+    Menus.SetActiveMenu(Menus.MenuEnum.Desaparecidos);
 }
 <head>
     <meta charset="utf-8" />
