--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Desaparecidos.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Desaparecidos.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Desaparecidos";
+    Menus.SetActiveMenu(Menus.MenuEnum.Desaparecidos);
 }
 <head>
     <meta charset="utf-8" />
