--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Morador.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/Morador.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Morador";
+    Menus.SetActiveMenu(Menus.MenuEnum.SituacaoRua);
 }
 <head>
     <meta charset="utf-8" />
