--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/PesquisaDesaparecido.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/PesquisaDesaparecido.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "PesquisaDesaparecido";
+    Menus.SetActiveMenu(Menus.MenuEnum.Desaparecidos);
 }
 <head>
     <meta charset="utf-8" />
