--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/MoradoresDeRua.cshtml
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Views/Master/MoradoresDeRua.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Pessoas em situação de rua";
+    Menus.SetActiveMenu(Menus.MenuEnum.SituacaoRua);
 }
 <head>
     <meta charset="utf-8" />
